runa/docs/grammar/RunaGrammar.ebnf
# Runa Language EBNF Grammar

## Program Structure

/* Top-level program structure */
Program ::= Statement+

/* A statement in the Runa language */
Statement ::= Declaration | Assignment | Conditional | Loop | ProcessDefinition | ReturnStatement | DisplayStatement | Block | ImportStatement | TryCatchStatement | WhileLoop | CommentLine

## Comments

/* A single-line comment */
CommentLine ::= "#" [^\n]* "\n"

## Declarations and Assignments

/* A variable declaration */
Declaration ::= "Let" Identifier OptionalType "be" Expression | "Define" Identifier OptionalType "as" Expression | "Define" Identifier OptionalType "as" "list" "containing" ExpressionList

/* An optional type annotation */
OptionalType ::= ("(" Identifier ")")? 

/* An assignment statement */
Assignment ::= "Set" Identifier "to" Expression

## Expressions

/* An expression */
Expression ::= Literal | Identifier | BinaryExpression | FunctionCall | ListExpression | DictionaryExpression | IndexAccess | MemberAccess | "(" Expression ")" | "the" "sum" "of" "all" Identifier "in" Identifier | "length" "of" Expression | Expression "multiplied" "by" Expression | Expression "plus" Expression | Expression "minus" Expression | Expression "divided" "by" Expression | Expression "followed" "by" Expression | Expression "at" "index" Expression | "index" "of" Expression "in" Expression | "convert" "to" Identifier "(" Expression ")"

/* A literal value */
Literal ::= StringLiteral | NumberLiteral | BooleanLiteral | NullLiteral

/* A string literal */
StringLiteral ::= "'" [^']* "'" | "\"" [^"]* "\""

/* A number literal */
NumberLiteral ::= [0-9]+ ("." [0-9]+)?

/* A boolean literal */
BooleanLiteral ::= "true" | "false"

/* A null literal */
NullLiteral ::= "null" | "none"

/* A binary expression */
BinaryExpression ::= Expression Operator Expression

/* An operator in a binary expression */
Operator ::= "is" "greater" "than" | "is" "less" "than" | "is" "equal" "to" | "is" "not" "equal" "to" | "is" "greater" "than" "or" "equal" "to" | "is" "less" "than" "or" "equal" "to" | "and" | "or" | "contains"

## Collections

/* A list expression */
ListExpression ::= "list" "containing" ExpressionList | "[" ExpressionList "]"

/* A list of expressions */
ExpressionList ::= Expression ("," Expression)* | ""

/* A dictionary expression */
DictionaryExpression ::= "dictionary" "with" ":" INDENT KeyValuePair+ DEDENT | "{" KeyValuePair ("," KeyValuePair)* "}"

/* A key-value pair in a dictionary */
KeyValuePair ::= StringLiteral "as" Expression | Identifier "as" Expression

## Access Operations

/* An index access operation */
IndexAccess ::= Identifier "[" Expression "]"

/* A member access operation */
MemberAccess ::= Identifier "." Identifier

## Control Structures

/* A conditional statement */
Conditional ::= "If" Expression ":" Block ("Otherwise" "if" Expression ":" Block)* ("Otherwise" ":" Block)?

/* A loop statement */
Loop ::= "For" "each" Identifier "in" Expression ":" Block

/* A while loop statement */
WhileLoop ::= "While" Expression ":" Block

/* A block of statements */
Block ::= INDENT Statement+ DEDENT | "{" Statement+ "}"

/* A try-catch statement */
TryCatchStatement ::= "Try" ":" Block "Catch" Identifier ":" Block

## Functions

/* A function definition */
ProcessDefinition ::= "Process" "called" StringLiteral "that" "takes" ParameterList ("returns" "(" Identifier ")")? ":" Block

/* A list of function parameters */
ParameterList ::= Identifier OptionalType ("and" Identifier OptionalType)* | Identifier OptionalType ("," Identifier OptionalType)* | ""

/* A return statement */
ReturnStatement ::= "Return" Expression

/* A function call */
FunctionCall ::= Identifier "with" NamedArguments | Identifier "with" ":" INDENT NamedArguments DEDENT | Identifier "(" ExpressionList ")"

/* A list of named arguments */
NamedArguments ::= NamedArgument ("and" NamedArgument)* | NamedArgument (NEWLINE NamedArgument)* | ""

/* A named argument */
NamedArgument ::= Identifier "as" Expression

## I/O Operations

/* A display statement */
DisplayStatement ::= "Display" Expression ("with" "message" Expression)?

/* An input statement */
InputStatement ::= "input" "with" "prompt" StringLiteral

## Modules

/* An import statement */
ImportStatement ::= "Import" "module" StringLiteral | "Import" Identifier "from" "module" StringLiteral

## Identifiers

/* An identifier */
Identifier ::= [a-zA-Z_][a-zA-Z0-9_]* ("." [a-zA-Z_][a-zA-Z0-9_]*)* | [a-zA-Z_][a-zA-Z0-9_]* (" " [a-zA-Z_][a-zA-Z0-9_]*)+

## AI Extensions

/* A neural network model definition */
ModelDefinition ::= "Define" "neural" "network" StringLiteral ":" ModelBlock

/* A block of model statements */
ModelBlock ::= INDENT ModelStatement+ DEDENT

/* A statement in a model definition */
ModelStatement ::= "Input" "layer" "accepts" Expression | "Use" "convolutional" "layers" "starting" "with" NumberLiteral "filters" | "Double" "filters" "at" "each" "downsampling" | "Include" "residual" "connections" | "Output" "layer" "has" NumberLiteral "classes" "with" Identifier "activation"

/* A training configuration */
TrainingConfig ::= "Configure" "training" "for" Identifier ":" TrainingBlock

/* A block of training statements */
TrainingBlock ::= INDENT TrainingStatement+ DEDENT

/* A statement in a training configuration */
TrainingStatement ::= "Use" "dataset" StringLiteral "with" Expression | "Apply" Expression "for" "augmentation" | "Use" Identifier "optimizer" "with" "learning" "rate" NumberLiteral | "Train" "for" NumberLiteral "epochs" "or" "until" Expression | "Save" "best" "model" "based" "on" Expression

## Knowledge Integration

/* A knowledge query */
KnowledgeQuery ::= "knowledge" "." "query" "(" StringLiteral ")" | "knowledge" "." Identifier "(" ExpressionList ")"

## Special Productions

/* An increase in indentation level */
INDENT ::= /* increase of indentation level */

/* A decrease in indentation level */
DEDENT ::= /* decrease of indentation level */

/* A newline with consistent indentation */
NEWLINE ::= /* newline character with consistent indentation */ 
